[package]
name = "casperlabs-engine-grpc-server"
version = "0.5.1"
authors = ["Mateusz Górski <gorski.mateusz@protonmail.ch>"]
description = "WASM execution engine for CasperLabs smart contracts"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.32.0"
common = { path = "../common", package = "casperlabs-contract-ffi" }
ctrlc = "3.1.2"
dirs = "1.0.5"
execution-engine = { path = "../engine" }
futures = "0.1.8"
futures-cpupool = "0.1.8"
grpc = "0.6.1"
lazy_static = "1.3.0"
lmdb = "0.8.0"
proptest = "0.9.2"
protobuf = "2"
shared = { path = "../shared" }
storage = { path = "../storage" }
wabt = "0.7.4"
wasm-prep = { path = "../wasm-prep" }
jni = "0.13.0"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[dev-dependencies]
parity-wasm = "0.31"

[lib]
name = "casperlabs_engine_server"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
casperlabs-engine-grpc-server = { path = "/usr/bin/casperlabs-engine-grpc-server" }
